# AttackSharkBattery

./: .gitignore  README.md  build-windows.ps1  pyproject.toml
src/attack_shark_battery/: __init__.py  battery.py  cli.py  hid_tools.py  startup.py  tray.py
